Fix menu button color transition in Safari (by wrapping in a div?)

--- a/src/components/menu-button/style.sass
+++ b/src/components/menu-button/style.sass
@@ -1,9 +1,11 @@
+.menu-button
+  transition: color .5s
+
 svg
   transform: scaleY(-1) rotate(90deg)
   width: calc(11px + 1vw)
   height: calc(11px + 1vw)
   cursor: pointer
-  transition: color .5s
 
 @media (pointer: coarse)
   svg
